respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Shipment__c.object
<CustomObject>
    <description>Object used to define a shipment associated to an Account and Import-Export order.</description>
    <fields>
        <fullName>AMS__c</fullName>
        <label>AMS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATAPOD__c</fullName>
        <label>OI ATAPOD</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA_ETA_notification__c</fullName>
        <formula>AND(

ShipmentService__c = &quot;SP-FN&quot;,
ISPICKVAL(Shipment_Status_Plann__c, &quot;In Progress&quot;),

OR(
DATEVALUE(ATA__c) &lt;&gt; ETA_Point_of_Discharge__c,
DATEVALUE(ATD__c) &lt;&gt; ETD_from_Point_of_Load__c


)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATA &lt; ETA notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATA__c</fullName>
        <inlineHelpText>Actual Time of Arrival
Fecha y hora Compromiso para Descargar</inlineHelpText>
        <label>ATA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ATD__c</fullName>
        <inlineHelpText>Actual Time of Departure
Fecha y hora en que la Unidad llegará a Cargar</inlineHelpText>
        <label>ATD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AUTORIZADO_FP_FO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AUTORIZADO FP/FO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AUTORIZAR_GASTO_EXTRA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AUTORIZAR GASTO EXTRA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acc_venta__c</fullName>
        <formula>TEXT(Account_for__r.Venta_Sap__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Destination_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Dependent on &quot;Consignee Account&quot;</inlineHelpText>
        <label>Account Destination Address</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR (1 AND 2 AND 5) OR (4 AND 6)</booleanFilter>
            <filterItems>
                <field>Account_Address__c.status__c</field>
                <operation>equals</operation>
                <value>Validado</value>
            </filterItems>
            <filterItems>
                <field>Account_Address__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Mode__c</field>
                <operation>equals</operation>
                <value>NATIONAL</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Mode__c</field>
                <operation>notEqual</operation>
                <value>NATIONAL</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Mode__c</field>
                <operation>equals</operation>
                <value>PORT</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Mode__c</field>
                <operation>notEqual</operation>
                <value>PORT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Address__c</referenceTo>
        <relationshipLabel>Shipments (Account Destination Address)</relationshipLabel>
        <relationshipName>Shipments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Destination_Address_text__c</fullName>
        <formula>Account_Destination_Address__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Destination Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Origin_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Origin Address</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR (1 AND 2 AND 5) OR (4 AND 6)</booleanFilter>
            <filterItems>
                <field>Account_Address__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account_Address__c.status__c</field>
                <operation>equals</operation>
                <value>Validado</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Mode__c</field>
                <operation>equals</operation>
                <value>NATIONAL</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Mode__c</field>
                <operation>notEqual</operation>
                <value>NATIONAL</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Mode__c</field>
                <operation>equals</operation>
                <value>PORT</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Mode__c</field>
                <operation>notEqual</operation>
                <value>PORT</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account_Address__c</referenceTo>
        <relationshipLabel>Shipments (Account Origin Address)</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Own_department__c</fullName>
        <formula>Account_for__r.Owner.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Own department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Segment__c</fullName>
        <formula>TEXT(Account_for__r.Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Shipment_Reference__c</fullName>
        <label>Customer Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Stop_B__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Stop B</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments (Account Stop B)</relationshipLabel>
        <relationshipName>Shipments_Account_Stop_B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Stop_C__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Stop C</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments (Account Stop C)</relationshipLabel>
        <relationshipName>Shipments_Account_Stop_C</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account_for__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_for_Catalog_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account for (Catalog Price List)</label>
        <referenceTo>Customer_Price_List__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_for_Customer_Name__c</fullName>
        <formula>Account_for__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account for (Customer) Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_for_Record_Type__c</fullName>
        <formula>Account_for__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account for (Record Type)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_for__c</fullName>
        <inlineHelpText>Record Type must be Customer</inlineHelpText>
        <label>Account for (Customer)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer, Prospect</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments (Account for)</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Account_owner__c</fullName>
        <formula>Account_for__r.Owner.FirstName  &amp; &quot; &quot; &amp; Account_for__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acuse_en_SAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acuse en SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Location_Destination_Latitude__c</fullName>
        <label>Additional Location Destination Latitude</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Location_Destination_Longitud__c</fullName>
        <label>Additional Location Destination Longitud</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Location_Destination__c</fullName>
        <label>Route Through (Delivery)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Location_Latitude__c</fullName>
        <label>Additional Location Latitude</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Location_Longitude__c</fullName>
        <label>Additional Location Longitude</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Location__c</fullName>
        <label>Route Through (Origin)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Agent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments (Origin Agent)</relationshipLabel>
        <relationshipName>Shipments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Air_Booking_Number__c</fullName>
        <label>Air Booking Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Latitude__c</fullName>
        <label>Air Latitude</label>
        <precision>13</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Longitude__c</fullName>
        <label>Air Longitude</label>
        <precision>13</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Shipment_Status__c</fullName>
        <label>Air Shipment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact with Origin</fullName>
                </value>
                <value>
                    <fullName>Pickup and Delivery to Airline</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Flight Confirmation</fullName>
                </value>
                <value>
                    <fullName>Layover</fullName>
                </value>
                <value>
                    <fullName>Arrival Confirmation</fullName>
                </value>
                <value>
                    <fullName>Pending with Customs Broker</fullName>
                </value>
                <value>
                    <fullName>Final Delivery</fullName>
                </value>
                <value>
                    <fullName>Finish</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Consigness Notification</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_date_time__c</fullName>
        <label>Approved Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arrival_to_B__c</fullName>
        <label>Arrival to B</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arrival_to_C__c</fullName>
        <label>Arrival to C</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arrival_to_D__c</fullName>
        <label>Arrival to D</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Asunto_Cita__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asunto/Cita</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autoriza_Gasto_Ext__c</fullName>
        <label>Date Autoriza Gasto Extra</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking_Confirmation__c</fullName>
        <label>Booking Confirmation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Border__c</fullName>
        <label>Border</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Norte</fullName>
                </value>
                <value>
                    <fullName>Sur</fullName>
                </value>
                <value>
                    <fullName>Marítimas</fullName>
                </value>
                <value>
                    <fullName>Interiores</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIM_Number__c</fullName>
        <label>CIM Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Version__c</fullName>
        <defaultValue>1.0</defaultValue>
        <description>Versión de Carta Porte</description>
        <label>Version</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_by__c</fullName>
        <label>Cancelled by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cargo insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carrier_Active__c</fullName>
        <formula>Carrier__r.ActiveSap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>¿Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carrier_Email__c</fullName>
        <label>Carrier Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Carrier_OI__c</fullName>
        <label>OIV2 Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Shipment_Reference__c</fullName>
        <label>Carrier Shipment Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments (Carrier)</relationshipLabel>
        <relationshipName>Shipments_Carrier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carriers_OI__c</fullName>
        <label>OIV2 Carriers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aliança Navegação e Logística</fullName>
                </value>
                <value>
                    <fullName>American President Lines</fullName>
                </value>
                <value>
                    <fullName>ANL Container Line</fullName>
                </value>
                <value>
                    <fullName>Arkas Container Transport S.A.</fullName>
                </value>
                <value>
                    <fullName>Atlantic Container Line</fullName>
                </value>
                <value>
                    <fullName>Cheng Lie Navigation</fullName>
                </value>
                <value>
                    <fullName>China Navigation</fullName>
                </value>
                <value>
                    <fullName>China Shipping Container Lines</fullName>
                </value>
                <value>
                    <fullName>China United Lines Ltd.</fullName>
                </value>
                <value>
                    <fullName>CMA CGM</fullName>
                </value>
                <value>
                    <fullName>Compañi­a Chilena de Navegación Interoceáica S.A.</fullName>
                </value>
                <value>
                    <fullName>COSCO Container Lines</fullName>
                </value>
                <value>
                    <fullName>Crowley Liner Services</fullName>
                </value>
                <value>
                    <fullName>DELMAS</fullName>
                </value>
                <value>
                    <fullName>Deutsche Africa-Linien</fullName>
                </value>
                <value>
                    <fullName>Emirates Shipping Line DMCEST</fullName>
                </value>
                <value>
                    <fullName>Evergreen Line</fullName>
                </value>
                <value>
                    <fullName>Far-Eastern Shipping Company</fullName>
                </value>
                <value>
                    <fullName>Gold Star Line Ltd.</fullName>
                </value>
                <value>
                    <fullName>Grimaldi Lines</fullName>
                </value>
                <value>
                    <fullName>Hamburg Süd</fullName>
                </value>
                <value>
                    <fullName>Hanjin Shipping Co., Ltd.</fullName>
                </value>
                <value>
                    <fullName>Hapag Lloyd</fullName>
                </value>
                <value>
                    <fullName>Hyundai Merchant Marine</fullName>
                </value>
                <value>
                    <fullName>King Ocean Services, Ltd.</fullName>
                </value>
                <value>
                    <fullName>Korea Marine Transport Co.</fullName>
                </value>
                <value>
                    <fullName>MacAndrews</fullName>
                </value>
                <value>
                    <fullName>Maersk Line</fullName>
                </value>
                <value>
                    <fullName>Matson, Inc.</fullName>
                </value>
                <value>
                    <fullName>MCC Transport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carriers_value_OI__c</fullName>
        <label>OIV2 Carriers value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aliança Navegação e Logística_ALIU_ALIANCA</fullName>
                </value>
                <value>
                    <fullName>American President Lines_APLU_APL</fullName>
                </value>
                <value>
                    <fullName>ANL Container Line_ANLC_ANL</fullName>
                </value>
                <value>
                    <fullName>Arkas Container Transport S.A._ARKU</fullName>
                </value>
                <value>
                    <fullName>Arkas Container Transport S.A._ARKU_ARKAS</fullName>
                </value>
                <value>
                    <fullName>Atlantic Container Line_ACLU_ACL</fullName>
                </value>
                <value>
                    <fullName>Cheng Lie Navigation_CNCX_CNC</fullName>
                </value>
                <value>
                    <fullName>China Navigation_CHVW_CHINANAV</fullName>
                </value>
                <value>
                    <fullName>China Shipping Container Lines_CHNJ_CSCL</fullName>
                </value>
                <value>
                    <fullName>China United Lines Ltd._CULX_CULINES</fullName>
                </value>
                <value>
                    <fullName>CMA CGM_CMDU_CMACGM</fullName>
                </value>
                <value>
                    <fullName>Compañi­a Chilena de Navegación Interoceáica S.A._CNIU_CCNI</fullName>
                </value>
                <value>
                    <fullName>COSCO Container Lines_COSU_COSCO</fullName>
                </value>
                <value>
                    <fullName>Crowley Liner Services_CMSN_CROWLEY</fullName>
                </value>
                <value>
                    <fullName>Deutsche Africa-Linien_DALU_DAL</fullName>
                </value>
                <value>
                    <fullName>Emirates Shipping Line DMCEST_ESPU_emirates</fullName>
                </value>
                <value>
                    <fullName>Evergreen Line_EVRG_EVERGREEN</fullName>
                </value>
                <value>
                    <fullName>Far-Eastern Shipping Company_FANE_FESCO</fullName>
                </value>
                <value>
                    <fullName>Gold Star Line Ltd._GSLU_GOLDSTARLINE</fullName>
                </value>
                <value>
                    <fullName>Grimaldi Lines_GRIU_GRIMALDI</fullName>
                </value>
                <value>
                    <fullName>Hamburg Süd_SUDU_HAMBURGSUD</fullName>
                </value>
                <value>
                    <fullName>Hanjin Shipping Co., Ltd._HJSC_HANJIN</fullName>
                </value>
                <value>
                    <fullName>Hapag Lloyd_HLCU_Hapag</fullName>
                </value>
                <value>
                    <fullName>Hyundai Merchant Marine_HDMU_HMM</fullName>
                </value>
                <value>
                    <fullName>King Ocean Services, Ltd._KOSL_kingocean</fullName>
                </value>
                <value>
                    <fullName>Korea Marine Transport Co._KMTU_kmtc</fullName>
                </value>
                <value>
                    <fullName>MacAndrews_MCAW_macandrews</fullName>
                </value>
                <value>
                    <fullName>Maersk Line_MAEU_MAERSK</fullName>
                </value>
                <value>
                    <fullName>Matson, Inc._MATS_matson</fullName>
                </value>
                <value>
                    <fullName>MCC Transport_MCPU_mcc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Catalog_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog Price List</label>
        <referenceTo>Price_List__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments_Catalog_Price_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Causante_de_Devoluci_n__c</fullName>
        <label>Causante de Devolución</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cliente</fullName>
                </value>
                <value>
                    <fullName>Proveedor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Celular_op__c</fullName>
        <formula>National_Operator__r.Telfij_ope__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Celular</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clasificacion_de_cliente__c</fullName>
        <formula>TEXT(Account_for__r.Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clasificación de cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clasificacion_proveedores__c</fullName>
        <formula>TEXT( Account_for__r.Carrier_Class__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clasificación de proveedores</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente_con_cita2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cliente con cita</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cliente_con_cita__c</fullName>
        <formula>Account_for__r.Cliente_con_cita__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente con cita</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compania_GPS__c</fullName>
        <formula>Carrier__r.Comgps_cta__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compañía GPS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Dependent on &quot;Consignee Account&quot;</inlineHelpText>
        <label>Contacto Destino</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Consignee__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipments (Consignee Contact)</relationshipLabel>
        <relationshipName>Shipments_Consignee_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Record Type must be Customer</inlineHelpText>
        <label>Cuenta Destino</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Consignee</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments (Consignee)</relationshipLabel>
        <relationshipName>Shipments_Consignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account_for__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Container_Size__c</fullName>
        <label>Container Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>20&quot; Container</fullName>
                </value>
                <value>
                    <fullName>40&quot; Container</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Container_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Container Type</label>
        <referenceTo>Container_Type__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contenedor_Regresado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contenedor Regresado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contrasena_Cuenta_Espejo__c</fullName>
        <label>Contraseña Cuenta Espejo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Conversion Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count_Sap__c</fullName>
        <formula>IF(ISPICKVAL( Status_Shipment__c, &quot;Send to Sap&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count_Sap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_of_Discharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country of Discharge</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Shipments (Country of Discharge)</relationshipLabel>
        <relationshipName>Shipments_Country_of_Discharge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_of_Load__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country of Load</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Shipments (Country of Load)</relationshipLabel>
        <relationshipName>Shipments_Country_of_Load</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreateDate02__c</fullName>
        <formula>TEXT(DATETIMEVALUE(Shipment_Create_Date__c))&amp; text(timevalue(Shipment_Create_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreateDate02</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customs_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customs Broker</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>